# numeric

./: .gitignore
chp0/: CMakeLists.txt  nest.cpp
chp1/: CMakeLists.txt  bisect.cpp  fpi.cpp  iqi.cpp  newton.cpp  secant.cpp
chp2/: CMakeLists.txt  cg.h  cholesky.h  cond.h  constants.h  gaussian_elim.h  lu.h  macros.h  main.cpp  main_direct.cpp  main_iterative.cpp  poisson.cpp
chp4/: CMakeLists.txt  QR.cpp
matlab/chp0/: main.m  nest.m
matlab/chp1/: main.asv  main.m  newton.asv  newton.m  stewart.asv  stewart.m  stewart_f.m
matlab/chp2/: beam.m  broyden1.m  broyden2.m  cg.m  cg_pre.m  dive.m  enlarge_w.m  gauss_seidel.m  iterative.asv  iterative.m  jacobi.m  main.m  main_broyden.m  main_conjugate.m  sor.m  sparsesetup.m  steel.m  thicker.m
matlab/chp3/: clickinterp.m  main.m  nest.m  newtdd.m  sin1.m  sininterp.m  splinecoeff.asv  splinecoeff.m  splineplot.asv  splineplot.m
matlab/chp4/: GMRES.m  GMRES_pre.m  QR0.m  eigenvalue.m  enhancedQR.m  householderQR.asv  householderQR.m  main.asv  main.m  main_gmres.m
matlab/chp5/: adapquad.asv  adapquad.m  bisect.asv  bisect.m  main.asv  main.m  simpson_int.m  trap.m  trapezoid_int.m
matlab/chp6/: adaptiveODE.m  bounce.m  euler.m  euler_backward.asv  euler_backward.m  euler_sys.m  exmultistep.asv  exmultistep.m  hh.m  main.m  main66.asv  main66.m  main67.m  main_anim.asv  main_anim.m  main_sys.m  orbit.asv  orbit.m  pend_fric.m  predcorr.asv  predcorr.m  rk4.m  stiff.m  trapezoid.m
matlab/chp7/: F.m  bvpfem.m  main_nlbvp.m  mainfem.m  nlbvp.m  ydot.m  (+1 more)
solutions/: pend.m
topology_optim/: main.m  top_optim.m
(+9 files in other folders)
